# JI-Website

./: CHANGELOG.md  CNAME  JI-Website-Report.docx  README.md  SITE-ARCHITECTURE.md  generate_report.py  index (8).html  index.html  index_BACKUP_login_link_update.html  index_backup_2026-05-21.html  index_preview_sasha.html  justice-innovations-v5.html  pyproject.toml  requirements-test.txt
.github/workflows/: ci.yaml
Edits/: David Edits.docx
tests/: conftest.py  test_accessibility.py  test_content.py  test_html_structure.py  test_mobile.py  test_security.py
