[project]
name = "ji-website-tests"
version = "0.1.0"
description = "Test suite for Justice Innovations marketing website"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "ANN", # flake8-annotations
    "S",   # flake8-bandit (security)
    "RUF", # ruff-specific
]
ignore = [
    "S101",   # use of assert (fine in pytest)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN201", "ANN001", "S"]
